src/test/deca/extension/context/valid/declaration_array_with_empty_bracket2.deca
// Description:
// 	  Declaration of an array with empty bracket
// Resultats:
// 	  ok
// Historique:
// 	  cree le /01/2023

{
    int[] tab = {4, 5, 6, 7};
    int[][] tab1 = {tab};
}